--- a/app/views/cuisines_templates/index.html.erb
+++ b/app/views/cuisines_templates/index.html.erb
@@ -1,92 +1,35 @@
-<div class="page-header">
-  <h1>
-    Cuisines
-    <a href="/cuisines/new" class="btn btn-lg btn-success">New Cuisine</a>
-  </h1>
-</div><div class="row mb-1">
-  <div class="col-md-12">
-    <%= search_form_for @q, :class => "collapse", :id => "cuisines_filters" do |f| %>
-      <p class="lead">Narrow results:</p>
-
-        <div class="form-group">
-    <%= f.label :name_cont, "Name contains" %>
-    <%= f.text_field :name_cont, :class => "form-control", :placeholder => "Name contains" %>
-  </div>
-
-<div class="form-group">
-          <%= f.label :created_at, "Created at" %>
-          <div class="row">
-            <div class='col-md-6 mb-1'>
-              <div class='input-group date' id='created_atgteqPicker'>
-                  <%= f.text_field :created_at_gteq, :class => "form-control", :placeholder => "Created at greater than or equal to" %>
-                  <span class="input-group-addon">
-                      <span class="glyphicon glyphicon-calendar"></span>
-                  </span>
-              </div>
-            </div>
-
-            <div class='col-md-6'>
-              <div class='input-group date' id='created_atlteqPicker'>
-                  <%= f.text_field :created_at_lteq, :class => "form-control", :placeholder => "Created at less than or equal to" %>
-                  <span class="input-group-addon">
-                      <span class="glyphicon glyphicon-calendar"></span>
-                  </span>
-              </div>
-            </div>
-          </div>
-      </div>
-      <script type="text/javascript">
-          $(function () {
-              $('#created_atgteqPicker').datetimepicker({
-                  format: 'YYYY-MM-DD hh:mm:SS'
-              });
-              $('#created_atlteqPicker').datetimepicker({
-                  useCurrent: false,
-                  format: 'YYYY-MM-DD hh:mm:SS'
-              });
-              $('#created_atgteqPicker').on("dp.change", function (e) {
-                  $('#created_atlteqPicker').data("DateTimePicker").minDate(e.date);
-              });
-              $('#created_atlteqPicker').on("dp.change", function (e) {
-                  $('#created_atgteqPicker').data("DateTimePicker").maxDate(e.date);
-              });
-          });
-      </script>
-
-        <div class="form-group">
-      <%= f.label :dishes_name_cont, "Dish name contains" %>
-      <%= f.text_field :dishes_name_cont, :class => "form-control", :placeholder => "Dish name contains" %>
+<!-- Validation failure messages -->
+<% if @cuisine.errors.any? %>
+  <% @cuisine.errors.full_messages.each do |message| %>
+    <div class="alert alert-dismissable alert-danger">
+      <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+      <%= message %>
     </div>
+  <% end %>
+<% end %>
 
-      <%= f.submit :class => "btn btn-primary btn-block mb-1" %>
-
-      <a href="/cuisines" class="btn btn-secondary btn-block mb-1">Clear filters</a>
-    <% end %>
-    <a class="btn btn-secondary btn-block mb-1" data-toggle="collapse" href="#cuisines_filters">
-      Show Filters
-    </a>
-  </div>
+<div class="page-header">
+  <h3>Edit Cuisine #<%= @cuisine.id %></h3>
 </div>
 
 <div class="row">
   <div class="col-md-12">
-    <table class="table table-striped table-hover">
-      <tr>
-        <th>Name</th>
-        <th>Actions</th>
-      </tr>
+    <form action="/update_cuisine/<%= @cuisine.id %>" method="post">
 
-      <% @cuisines.each do |cuisine| %>
-      <tr>
-        <td><%= cuisine.name %></td>
-        <td>
-          <a href="/cuisines/<%= cuisine.id %>" class="btn btn-primary">Show</a>
-          <a href="/cuisines/<%= cuisine.id %>/edit" class="btn btn-warning">Edit</a>
-          <a href="/delete_cuisine/<%= cuisine.id %>" class="btn btn-danger" rel="nofollow">Delete</a>
-        </td>
-      </tr>
-      <% end %>
-    </table>
-    <%= paginate @cuisines, theme: 'twitter-bootstrap-4' %>
+      <!-- Label and input for name -->
+      <div class="form-group">
+        <label for="name" class="control-label">
+          Name
+        </label>
+
+        <input type="text" id="name" name="name" placeholder="Name" class="form-control" value="<%= @cuisine.name %>">
+      </div>
+
+      <button class="btn btn-warning">
+        Update Cuisine
+      </button>
+      or
+      <a href="/cuisines/<%= @cuisine.id %>">Cancel</a>
+    </form>
   </div>
 </div>
