--- a/app/views/dishes_templates/show.html.erb
+++ b/app/views/dishes_templates/show.html.erb
@@ -1,144 +1,78 @@
 <div class="page-header">
-  <h3>Dish #<%= @dish.id %></h3>
-</div>
-
-<div class="row">
-  <div class="col-md-12 mb-2">
-    <dl class="dl-horizontal">
-      <dt>Name</dt>
-      <dd><%= @dish.name %></dd>
-
-      <dt>Cuisine</dt>
-      <dd>
-        <% if @dish.cuisine.present? %>
-          <a href="/cuisines/<%= @dish.cuisine_id %>">
-            <%= @dish.cuisine.name %>
-          </a>
-        <% end %>
-      </dd>
-
-    </dl>
-
-    <div class="btn-group btn-group-justified">
-      <a href="/dishes" class="btn btn-primary">
-        Back
-      </a>
-      <a href="/dishes/<%= @dish.id %>/edit" class="btn btn-warning">
-        Edit
-      </a>
-      <a href="/delete_dish/<%= @dish.id %>" class="btn btn-danger" rel="nofollow">
-        Delete
-      </a>
-    </div>
-  </div>
+  <h3><%= @dish.name %></h3>
 </div>
 
 <!-- A Dish has many bookmarks -->
 
-<div class="row">
-  <div class="col-md-12">
-    <ul class="list-group">
-      <li class="list-group-item list-group-item-info">
-        Bookmarks
-      </li>
-
-      <% @dish.bookmarks.each do |bookmark| %>
-        <li class="list-group-item">
-          <a href="/bookmarks/<%= bookmark.id %>">
-            <%= bookmark.notes %>
+<div class="row mt-2 justify-content-md-center">
+  <div class="col-md-6">
+    <div class="card">
+      <div class="card-header">
+        <h4 class="card-title">
+          You loved the <%= @dish.name %> at...
+        </h4>
+        
+        <% @dish.bookmarks.each do |bm| %>
+        <div class="list-group-item">
+          <a href="/bookmarks/<%= bm.id %>">
+            <%= bm.notes %>
           </a>
           <div class="btn-group btn-group-xs float-right">
-            <a href="/bookmarks/<%= bookmark.id %>" class="btn btn-primary">
-              <i class="fa fa-search-plus"></i>
-            </a>
-            <a href="/bookmarks/<%= bookmark.id %>/edit" class="btn btn-warning">
-              <i class="fa fa-edit"></i>
-            </a>
-            <a href="/delete_bookmark/<%= bookmark.id %>" class="btn btn-danger" rel="nofollow">
-              <i class="fa fa-trash-o"></i>
-            </a>
+            <a href="/bookmarks/<%= bm.id %>"></a>
+            <a href="/bookmarks/<%= bm.id %>/edit"></a>
+            <a href="/delete_bookmark/<%= bm.id %>" rel="nofollow"></a>
           </div>
-        </li>
+        </div>
       <% end %>
-
+      
       <li class="list-group-item">
         <form action="/create_bookmark" method="post">
-
-      <!-- Label and input for dish_id -->
-      <input type="hidden" name="dish_id" value="<%= @dish.id %>">
-
-      <!-- Label and input for venue_id -->
-      <div class="form-group">
-        <label for="venue_id" class="control-label">
-          Venue
-        </label>
-
-        <%= select_tag(:venue_id, options_from_collection_for_select(Venue.all, :id, :name), :class => "form-control") %>
-      </div>
-
-      <!-- Label and input for user_id -->
-      <input type="hidden" name="user_id" value="<%= current_user.id %>">
-
-      <!-- Label and input for notes -->
-      <div class="form-group">
-        <label for="notes" class="control-label">
-          Notes
-        </label>
-
-        <textarea id="notes" name="notes" placeholder="Notes" class="form-control" rows="3"></textarea>
-      </div>
-
-      <button class="btn btn-block btn-success">
-        Create Bookmark
-      </button>
-    </form>
-      </li>
-    </ul>
-  </div>
-</div>
-
-<!-- A Dish has many fans -->
-
-<div class="row">
-  <div class="col-md-12">
-    <ul class="list-group">
-      <li class="list-group-item list-group-item-info">
-        Fans
-      </li>
-
-      <% @dish.fans.each do |user| %>
-        <li class="list-group-item">
-          <a href="/users/<%= user.id %>">
-            <%= user.username %>
-          </a>
-          <div class="btn-group btn-group-xs float-right">
-            <a href="/users/<%= user.id %>" class="btn btn-primary">
-              <i class="fa fa-search-plus"></i>
-            </a>
-            <a href="/users/<%= user.id %>/edit" class="btn btn-warning">
-              <i class="fa fa-edit"></i>
-            </a>
-            <a href="/delete_user/<%= user.id %>" class="btn btn-danger" rel="nofollow">
-              <i class="fa fa-trash-o"></i>
-            </a>
+          
+          <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+           
+          <input type="hidden" name="dish_id" value="<%= @dish.id %>">
+          
+          <input type="hidden" name="user_id" value="<%= current_user.id %>">
+           
+          <div class="form-group">
+            <label for="venue_id" class="control-label">
+              Venue
+            </label>
+            
+          <%= select_tag(:venue_id, options_from_collection_for_select(Venue.all, :id, :name), :class => "form-control") %>
           </div>
-        </li>
-      <% end %>
-    </ul>
+          
+          <div class="form-group">
+          <label for="notes" class="control-label">
+            Notes
+          </label>
+
+          <textarea id="notes" name="notes" placeholder="Dishes Notes" class="form-control" rows="3"></textarea>
+          </div>
+
+           <button class="btn btn-primary btn">
+                <i class="fa fa-heart"></i>
+              </button>
+        </form>
+      </li>
+      
+      </div>
+    </div>
   </div>
 </div>
 
-<!-- A Dish has many specialists -->
+      <!--A Dish has many specialists -->
 
-<div class="row">
-  <div class="col-md-12">
-    <ul class="list-group">
-      <li class="list-group-item list-group-item-info">
-        Specialists
+<div class="row mt-2 justify-content-md-center">
+  <div class="col-md-6">
+      <div class="card-header">
+        <h1 class="card-title">
+       Favorites
       </li>
-
+</h1>
       <% @dish.specialists.each do |venue| %>
-        <li class="list-group-item">
+        
+        <p class="list-group-item">
           <a href="/venues/<%= venue.id %>">
             <%= venue.name %>
           </a>
@@ -153,8 +87,11 @@
               <i class="fa fa-trash-o"></i>
             </a>
           </div>
-        </li>
+        </p>
       <% end %>
     </ul>
   </div>
+  </div>
 </div>
+
+
