--- a/app/views/venues_templates/index.html.erb
+++ b/app/views/venues_templates/index.html.erb
@@ -35,6 +35,7 @@
             </div>
           </div>
       </div>
+      
       <script type="text/javascript">
           $(function () {
               $('#created_atgteqPicker').datetimepicker({
@@ -69,7 +70,7 @@
     </div>
 
 <div class="form-group">
-      <%= f.label :specialties_name_cont, "Dish name contains" %>
+      <%= f.label :specialties_name_cont, "Bookmarked dish name contains" %>
       <%= f.text_field :specialties_name_cont, :class => "form-control", :placeholder => "Dish name contains" %>
     </div>
 
@@ -97,27 +98,23 @@
     <table class="table table-striped table-hover">
       <tr>
         <th>Name</th>
-        <th>Address</th>
-        <th>Neighborhood</th>
-        <th>Actions</th>
-      </tr>
 
+        <th>Neighborhood</th>
+
+      </tr>
       <% @venues.each do |venue| %>
+      <% bm = Bookmark.where(:venue_id => venue.id,:user_id => current_user.id).first %>
+      <% if bm %>
       <tr>
-        <td><%= venue.name %></td>
-        <td><%= venue.address %></td>
+        <td><a href="venues/<%= bm.venue_id %>">
+          <%= Venue.find(bm.venue_id).name %></a>
+        </td>
+          
         <td>
-          <% if venue.neighborhood.present? %>
-            <a href="/neighborhoods/<%= venue.neighborhood.id %>">
-              <%= venue.neighborhood.name %>
-            </a>
+          <a href="neighborhoods/<%= venue.neighborhood_id %>">
+          <%= Neighborhood.find(venue.neighborhood_id).name %></a>
           <% end %>
-        </td>
-        <td>
-          <a href="/venues/<%= venue.id %>" class="btn btn-primary">Show</a>
-          <a href="/venues/<%= venue.id %>/edit" class="btn btn-warning">Edit</a>
-          <a href="/delete_venue/<%= venue.id %>" class="btn btn-danger" rel="nofollow">Delete</a>
-        </td>
+          </td>
       </tr>
       <% end %>
     </table>
