--- a/app/views/venues_templates/show.html.erb
+++ b/app/views/venues_templates/show.html.erb
@@ -183,3 +183,25 @@
     handler.fitMapToBounds();
   });
 </script>
+
+<!-- Code for Google Map -->
+<!--<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyB_nAWVr-18Oi_XoadzVHmNT2vevvJfev4"></script>-->
+<!--<script>-->
+<!--  var map;-->
+<!--  function initialize() {-->
+<!--    var myLatlng = new google.maps.LatLng(<%= @latitude %>, <%= @longitude %>);-->
+<!--    var mapOptions = {-->
+<!--      zoom: 15,-->
+<!--      center: myLatlng-->
+<!--    };-->
+<!--    map = new google.maps.Map(document.getElementById('map-canvas'),-->
+<!--    mapOptions);-->
+<!--    var marker = new google.maps.Marker({-->
+<!--      position: myLatlng,-->
+<!--      map: map,-->
+<!--      title: 'Statue of Liberty'-->
+<!--    });-->
+<!--  }-->
+<!--  google.maps.event.addDomListener(window, 'load', initialize);-->
+<!--</script>-->
+<!--<div id="map-canvas" style="width: 100%; height: 400px"></div>-->
